<resources>
    <string name="app_name">Pacs影像</string>
    <string name="search_empty">请输入搜索字段\n\n支持医保卡号、姓名、就诊卡模糊搜索</string>
    <string name="scale">放大镜</string>
    <string name="satitution">饱和/127</string>
    <string name="pathmark">路线标记</string>
    <string name="circlemark">圆形标记</string>
    <string name="anglemeasure">测量角度</string>
    <string name="lengthmeasure">测量长度</string>
    <string name="colordegree">色度/127</string>
    <string name="lightdegree">亮度/127</string>
    <string name="sharppic">锐化图像</string>
    <string name="resetpic">还原图像</string>
    <string name="modify">修改</string>
    <string name="insertname">请输入姓名</string>
    <string name="hello">你好</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="come">来源</string>
    <string name="sickdescription">病情描述</string>
    <string name="roomid">住院编号</string>
    <string name="bednumber">床号</string>
    <string name="checkpart">检查部位</string>
    <string name="department">申请科室</string>
    <string name="checktype">检查类型</string>
    <string name="checkdevice">检查设备</string>
    <string name="nomore">没有更多了</string>
    <string name="title">标题</string>
    <string name="response">请求我的</string>
    <string name="request">我的请求</string>
    <string name="insertaccount">请输入账号</string>
    <string name="insertpassword">请输入密码</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="noaccount">没有账号？</string>
    <string name="singinNow">立即登录</string>
    <string name="welcome">欢迎您</string>
    <string name="rememberpassword">记住密码？</string>
    <string name="loadinginfo">加载信息中...</string>
    <string name="commit">提交意见</string>
    <string name="watchdic">查看影像</string>
    <string name="remotehelp">需要帮助？ 写下您的描述，该病人信息将传给对方查看</string>
    <string name="chosedoctor">请选择帮助的医生</string>
    <string name="send">发送</string>
    <string name="dicdescription">影像描述</string>
    <string name="diagnoseresult">诊断结果</string>
    <string name="commitreport">提交报告</string>
    <string name="searchhint">姓名/医保卡号/就诊号</string>
    <string name="paintmode">绘图模式</string>
    <string name="paintmodedescription">测量长度、角度、面积</string>
    <string name="adjustlight">调节色度</string>
    <string name="adjustlightdescription">亮度、对比度调节</string>
    <string name="watchdicinfo">查看图片属性</string>
    <string name="watchdicdescription">可查看图片包含的病人信息</string>
    <string name="showwindowornot">是否显示窗宽/窗位</string>
    <string name="downloadfailed">下载失败！用户删除文件</string>
    <string name="readytodownload">准备下载中...</string>
    <string name="diccompare">影像对比</string>
    <string name="diclist">影像列表</string>
    <string name="light">亮度/</string>
    <string name="satut">饱和/</string>
    <string name="colo">色度/</string>
    <string name="dicwatch">影像查看</string>
    <string name="accountpasswordnotnull">账号、密码不能为空</string>
    <string name="loginsuccess">账号登录成功</string>
    <string name="no">无</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="medicalcard">医保卡</string>
    <string name="sickcard">就诊卡</string>
    <string name="exit">确认退出吗？</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="double2exit">再次点击退出</string>
    <string name="baseinfo">基本信息</string>
    <string name="dic_watch">影像调阅</string>
    <string name="dic_compare">影像对比</string>
    <string name="remote_check">远程会诊</string>
    <string name="chosefunction">选择功能</string>
    <string name="watchmsg">查看消息</string>
    <string name="detail">详细信息</string>
    <string name="youradvice">请输入你的建议</string>
    <string name="commitsuccess">提交成功</string>
    <string name="commitfailed">提交失败</string>
    <string name="helped">已协助</string>
    <string name="ask">提问：</string>
    <string name="askremote">请求远程会诊</string>
    <string name="yourdes">请输入您的问题描述</string>
    <string name="choseadoc">请选择一位医生</string>
    <string name="applysuccess">申请成功</string>
    <string name="checkreport">检查报告</string>
    <string name="reportlist">报告列表</string>
    <string name="chosetooperate">请选择操作对象</string>

    <string-array name="patientSpinner">
        <item>姓名</item>
        <item>医保卡</item>
    </string-array>
    <string-array name="sexspinner">
        <item>女</item>
        <item>男</item>
    </string-array>
</resources>
