<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size24"
        android:hint="@string/insertname"
        app:counterEnabled="true"
        app:hintTextAppearance="@style/textstyle">

        <android.support.design.widget.TextInputEditText
            android:paddingTop="@dimen/size20"
            android:paddingBottom="@dimen/size20"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirm"
        android:background="@drawable/stoken_background_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/size24"
        android:text="@string/modify" />
</LinearLayout>