<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size8"
        android:layout_marginEnd="@dimen/size32"
        android:layout_marginLeft="@dimen/size32"
        android:layout_marginRight="@dimen/size32"
        android:layout_marginStart="@dimen/size32"
        android:layout_marginTop="0dp"
        android:hint="@string/insertaccount"
        app:counterEnabled="true"
        app:hintTextAppearance="@style/textstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textVisiblePassword"
            android:text="admin"
            android:textSize="@dimen/titlesize" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/account_Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size32"
        android:layout_marginRight="@dimen/size32"
        android:layout_marginTop="@dimen/size16"
        android:hint="@string/insertpassword"
        app:counterEnabled="true"
        app:hintTextAppearance="@style/textstyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:text="888888"
            android:textSize="@dimen/titlesize" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size8"
        android:layout_marginRight="8dp"
        android:layout_marginTop="@dimen/size24"
        android:background="@drawable/stoken_background_selector"
        android:text="@string/forgetpassword"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size8"
        android:layout_marginRight="@dimen/size8"
        android:background="@drawable/stoken_background_selector"
        android:text="@string/noaccount"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/forget" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size32"
        android:layout_marginLeft="@dimen/size32"
        android:layout_marginRight="@dimen/size32"
        android:layout_marginStart="@dimen/size32"
        android:layout_marginTop="@dimen/size32"
        android:background="@drawable/stoken_background_selector"
        android:padding="@dimen/size15"
        android:text="@string/singinNow"
        android:textSize="@dimen/titlesize"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_Layout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/welcome"
        android:textSize="@dimen/middlesize"
        app:layout_constraintBottom_toTopOf="@+id/password_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/password_layout"
        app:layout_constraintRight_toRightOf="@+id/password_layout">

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size40"
        android:layout_marginTop="@dimen/size24"
        android:checked="true"
        android:singleLine="true"
        android:text="@string/rememberpassword"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />
</android.support.constraint.ConstraintLayout>