<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size16"
            android:layout_marginRight="@dimen/size16"
            android:layout_marginTop="@dimen/size16"
            android:gravity="left"
            android:text="@string/loadinginfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etinput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16"
            android:background="@drawable/stoken_round_background"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="4"
            android:textSize="@dimen/contentsize"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/info"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/info"
            app:layout_constraintTop_toBottomOf="@+id/ask" />

        <Button
            android:id="@+id/commit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size16"
            android:layout_marginStart="@dimen/size16"
            android:layout_marginTop="@dimen/size16"
            android:background="@drawable/stoken_background_selector"
            android:text="@string/commit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etinput" />

        <Button
            android:id="@+id/watch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16"
            android:background="@drawable/stoken_background_selector"
            android:text="@string/watchdic"
            app:layout_constraintEnd_toEndOf="@+id/info"
            app:layout_constraintStart_toStartOf="@+id/info"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <TextView
            android:id="@+id/ask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/info"
            app:layout_constraintStart_toStartOf="@+id/info"
            app:layout_constraintTop_toBottomOf="@+id/watch" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>